# bimsim-cuda

./: CMakeLists.txt  FindSTIM.cmake  README.md  arguments.h  bessel.h  bessik.cpp  bessjy.cpp  bimsim.files  bimsim.includes  cbessik.cpp  cbessjy.cpp  cuda_callable.h  dataTypes.h  defaults.h  fieldslice.cpp  fieldslice.cu  fieldslice.h  fileout.cu  fileout.h  gamma.cpp  main.cpp  microscope.cu  microscope.h  montecarlo.cpp  montecarlo.h  nearfield.cpp  nearfield.h  nfInterpolate.cu  nfScalarUf.cu  nfScalarUfLut.cu  nfScalarUpLut.cu  nfScalarUs.cu  nfSumUf.cu  nfVectorUf.cu  nfVectorUfLut.cu  planewave.h  runBimSim.py  scalarslice.cu  scalarslice.h  scalarsliceinterpolate.cu  (+6 more)
rts/cuda/: error.h  threads.h  timer.h
rts/envi/: envi.h  envi_header.h
rts/gl/: error.h  rtsSourceCode.h  rts_glShaderObject.h  rts_glShaderUniform.h  rts_glUtilities.h  texture.h
rts/math/: complex.h  function.h  legendre.h  matrix.h  point.h  quad.h  quaternion.h  spherical_bessel.h  triangle.h  vector.h
rts/optics/: material.h
rts/tools/: arguments.h  progressbar.h
rts/visualization/: colormap.h
win32/: mc_spheres.txt  spheres.txt
